--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,55 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/dst alpine tar cf /dst/go-build.tar -C /cache go-build
 
+  go-compatibility-tests:
+    if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
+    name: Go Compatibility Tests (Mlflow ${{ matrix.mlflow-version }} - ${{ matrix.database-uri}})
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        mlflow-version:
+          - 1.30.0
+          - 2.13.0
+        database-uri:
+          - postgres://postgres:postgres@postgres/postgres
+          - sqlite:///db/mlflow.db
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Compute cache info
+        id: cache-info
+        run: |
+          image=$(yq .services.integration-tests.image < tests/integration/docker-compose.yml)
+          echo go-version=$(skopeo inspect docker://${image} | jq -r .Digest | cut -d: -f2) >> $GITHUB_OUTPUT
+
+      - name: Setup cache
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/go-cache/go-build.tar
+          key: go-integration-tests-${{ matrix.database-backend }}-image-${{ steps.cache-info.outputs.go-version }}-mod-${{ hashFiles('.go-build-tags', 'go.sum') }}
+
+      - name: Restore cache
+        if: steps.cache.outputs.cache-hit == 'true'
+        run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/src alpine tar xf /src/go-build.tar -C /cache
+
+      - name: Run Container Tests
+        run: make container-compatibility-test
+        env:
+          DOCKER_BUILDKIT: 1
+          MLFLOW_VERSION: ${{ matrix.mlflow-version }}
+          DATABASE_URI: ${{ matrix.database-uri }}
+
+      - name: Save cache
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: docker run --rm -v fml-integration-tests_go-cache:/cache -v /tmp/go-cache:/dst alpine tar cf /dst/go-build.tar -C /cache go-build
+
+        
   python-integration-tests:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Python Integration Tests (${{ matrix.test-targets }})
